tests/base/invalid/SetEmpty_CompileFail_1.whiley
void f(int x):
    out<->println(str(x))

void System::main([string] args):
    f({})
